<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_port</name>
  <version>0.0.0</version>
  <description>Package for communicating from ROS2 to a robot</description>
  <maintainer email="contact@gn10.org">aiba-gento</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>gn10_can</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
